--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>color game</title>
 </head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
